# scredis

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: c-cpp.yml  cpp_tests.yml
notes/: socket-prog.org
src/: Makefile
src/client/: init  init.cpp
src/ds/: a.out  st_b_tree.cpp  st_b_tree.hpp
src/server/: init  init.cpp  lib_init.cpp
src/server/init.dSYM/Contents/Resources/DWARF/: init
tests/: basic_tests.cpp  benchmark_tests.cpp  correctness_tests.cpp  script.cpp
